Disable dark mode and fix home page a tag

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Slab&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 :root {
+  scroll-behavior: smooth;
   --background: #ffffff;
   --foreground: #171717;
 
@@ -20,13 +21,6 @@
   --fw-semi-bold: 600;
   --fw-bold: 700;
   --fw-black: 900;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
 }
 
 html,
@@ -53,6 +47,7 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
 
 @media (max-width:576px) {
   :root {
